--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,7 @@
 name: main-worklfow
 
+env: {}
+
 on:
   push:
     branches:
@@ -8,7 +10,7 @@ on:
     branches:
       - master
 
-  jobs:
+jobs:
   # Run all unit tests.
   run-tests:
     runs-on: ubuntu-latest
@@ -22,3 +24,9 @@ on:
         uses: actions/setup-go@v2-beta
         with:
           go-version: "^1.14" # The Go version to download and use.
+      - name: Print Go version
+        run: go version
+
+      # Run unit tests.
+      - name: Run unit tests
+        run: go test -v ./...
