--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2-beta
         with:
-          go-version: "^1.15" # The Go version to download and use.
+          go-version: "^1.16.x" # The Go version to download and use.
       - name: Print Go version
         run: go version
 
